# net-loginer

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
model/: charset.json  shtu_captcha.onnx
src/: auth.rs  classifier.rs  lib.rs  main.rs
