[package]
name = "net-loginer"
version = "0.4.1"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
dotenv = "0.15.0"
get_if_addrs = "0.5.3"
log = "0.4.21"
once_cell = "1.19.0"
serde_json = "1.0.116"
thiserror = "1.0.59"
anyhow = "1.0.83"
url = "2.5.0"
rgb = "0.8.37"

[dependencies.native-tls]
version = "0.2.8"
optional = true

[dependencies.simple_logger]
version = "5.0.0"
features = ["colors", "timestamps"]

[dependencies.ureq]
version = "2.9.7"
default-features = false

[dependencies.zune-jpeg]
version = "0.4.11"
features = ["std"]
default-features = false

[dependencies.resize]
version = "0.8.4"
features = ["std"]
default-features = false

[dependencies.onnxruntime]
git = "https://github.com/VOICEVOX/onnxruntime-rs.git"
branch = "master"

[features]
default = ["native-tls"]
native-tls = ["ureq/native-tls", "dep:native-tls"]
rustls = ["ureq/tls"]
