[package]
name = "net-loginer"
version = "0.5.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
dotenvy = "0.15.7"
get_if_addrs = "0.5.3"
log = "0.4.22"
serde_json = "1.0.132"
thiserror = "1.0.65"
anyhow = "1.0.91"
url = "2.5.2"
rgb = "0.8.50"
ort = "2.0.0-rc.7"
ndarray = "0.16.1"

[dependencies.native-tls]
version = "0.2.12"
optional = true

[dependencies.simple_logger]
version = "5.0.0"
features = ["colors", "timestamps"]

[dependencies.ureq]
version = "2.10.1"
default-features = false

[dependencies.zune-jpeg]
version = "0.4.13"
features = ["std"]
default-features = false

[dependencies.resize]
version = "0.8.7"
features = ["std"]
default-features = false

[features]
default = ["native-tls"]
native-tls = ["ureq/native-tls", "dep:native-tls"]
rustls = ["ureq/tls"]
