[package]
name = "net-loginer"
version = "0.5.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
dotenvy = "0.15.7"
get_if_addrs = "0.5.3"
log = "0.4.25"
serde_json = "1.0.138"
thiserror = "2.0.11"
anyhow = "1.0.95"
url = "2.5.4"
rgb = "0.8.50"
ort = "2.0.0-rc.9"
ndarray = "0.16.1"

[dependencies.native-tls]
version = "0.2.13"
optional = true

[dependencies.simple_logger]
version = "5.0.0"
features = ["colors", "timestamps"]

[dependencies.ureq]
version = "3.0.4"
default-features = false

[dependencies.zune-jpeg]
version = "0.4.14"
features = ["std"]
default-features = false

[dependencies.resize]
version = "0.8.8"
features = ["std"]
default-features = false

[features]
default = ["native-tls"]
native-tls = ["ureq/native-tls", "dep:native-tls"]
rustls = ["ureq/rustls"]
